update apple silicon build, basic or-tools output. Added basic starting point for json schema for schedule problem

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # Misc files
 *.DS_Store
+*.zip
+*.tar
 
 # Build files
 *.o
 *.sln
 
-# Build dirs
+# Build & Lib dirs
 build/
-or-tools*/
+lib/
+or-tools*
