--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -10,7 +10,12 @@ add_executable(scpsolver
     src/routes/RootHandler.cpp
     src/routes/CSPSolverHandler.cpp
     src/engine/CSPScheduler.cpp
+    src/util/SchemaValidator.cpp
     lib/civetweb/src/CivetServer.cpp
+)
+
+set_target_properties(scpsolver PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
 )
 
 # TODO: move this within platform specific sections as well
@@ -32,3 +37,35 @@ if(APPLE)
 else()
     target_link_libraries(scpsolver PRIVATE civetweb pthread dl)
 endif()
+
+include(FetchContent)
+
+# nlohmann/json
+FetchContent_Declare(
+  nlohmann_json
+  GIT_REPOSITORY https://github.com/nlohmann/json.git
+  GIT_TAG v3.11.3 # Or latest stable
+)
+FetchContent_MakeAvailable(nlohmann_json)
+
+# json-schema-validator (requires nlohmann/json)
+FetchContent_Declare(
+  json_schema_validator
+  GIT_REPOSITORY https://github.com/pboettch/json-schema-validator.git
+  GIT_TAG 2.3.0
+)
+FetchContent_MakeAvailable(json_schema_validator)
+
+target_link_libraries(scpsolver
+  PRIVATE
+    nlohmann_json::nlohmann_json
+    nlohmann_json_schema_validator
+)
+
+# --- GoogleTest for unit testing ---
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
