add mvp working doxy docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "cSpell.words": [
-        "ASIO",
-        "rabbitmq",
+        "Civetweb",
         "SCPSOLVE",
         "SCPSOLVER"
     ]
