--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 3.30)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+cmake_minimum_required(VERSION 4.0)
 project(scpsolver LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(scpsolver
@@ -18,14 +19,15 @@ set_target_properties(scpsolver PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
 )
 
-# TODO: move this within platform specific sections as well
-set(ORTOOLS_ROOT "${CMAKE_SOURCE_DIR}/lib/or-tools")
-
-find_package(ortools REQUIRED PATHS ${ORTOOLS_ROOT}/lib/cmake/ortools NO_DEFAULT_PATH)
-target_link_libraries(scpsolver PRIVATE ortools::ortools)
-
 if(APPLE)
-    target_include_directories(scpsolver PRIVATE ${CMAKE_SOURCE_DIR}/lib/civetweb/include)
+    if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm64|aarch64|arm")
+        set(ORTOOLS_ROOT "${CMAKE_SOURCE_DIR}/lib/or-tools-9.14.6206/mac-arm")
+    else()
+        message(FATAL_ERROR "wip macOS architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+    endif()
+
+    find_package(ortools REQUIRED PATHS ${ORTOOLS_ROOT}/lib/cmake/ortools NO_DEFAULT_PATH)
+    target_link_libraries(scpsolver PRIVATE ortools::ortools)
     target_link_directories(scpsolver PRIVATE ${CMAKE_SOURCE_DIR}/lib/civetweb)
     target_link_libraries(scpsolver PRIVATE civetweb pthread dl)
 
@@ -40,15 +42,14 @@ endif()
 
 include(FetchContent)
 
-# nlohmann/json
 FetchContent_Declare(
   nlohmann_json
   GIT_REPOSITORY https://github.com/nlohmann/json.git
-  GIT_TAG v3.11.3 # Or latest stable
+  GIT_TAG v3.11.3
 )
 FetchContent_MakeAvailable(nlohmann_json)
 
-# json-schema-validator (requires nlohmann/json)
+# (requires nlohmann/json)
 FetchContent_Declare(
   json_schema_validator
   GIT_REPOSITORY https://github.com/pboettch/json-schema-validator.git
@@ -62,13 +63,19 @@ target_link_libraries(scpsolver
     nlohmann_json_schema_validator
 )
 
-# --- GoogleTest for unit testing ---
 FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
+
+target_include_directories(scpsolver PRIVATE
+    ${CMAKE_BINARY_DIR}/_deps/nlohmann_json-src/include
+    ${CMAKE_BINARY_DIR}/_deps/json_schema_validator-src/include
+    ${CMAKE_BINARY_DIR}/_deps/googletest/googletest/include/gtest
+    ${CMAKE_SOURCE_DIR}/lib/civetweb/include
+)
 
 find_package(Doxygen)
 if(Doxygen_FOUND)
