--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(scpsolver
+    src/main.cpp
     src/server.cpp
     src/routes.cpp
     src/routes/RootHandler.cpp
